--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.1.6"
   }
 }
