--- a/package.json
+++ b/package.json
@@ -5,26 +5,48 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run lint && npm run build-only && npm run type-check",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --project ./tsconfig.vitest.json",
+    "clean:dist": "rimraf dist",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "firebase": "^10.9.0",
-    "lightningcss": "^1.24.1",
-    "vue": "^3.4.21",
-    "vue-i18n": "^9.10.2",
-    "vue-router": "^4.3.0",
-    "vuefire": "^3.1.23"
+    "firebase": "^10.13.1",
+    "lightningcss": "1.24.1",
+    "pinia": "2.1.7",
+    "vue": "3.4.29",
+    "vue-i18n": "9.10.2",
+    "vue-interact": "1.0.0",
+    "vue-router": "4.3.3",
+    "vuefire": "3.1.23"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.1.6"
+    "@eslint/js": "^9.9.1",
+    "@rushstack/eslint-patch": "1.10.4",
+    "@tsconfig/node22": "22.0.0",
+    "@types/eslint": "9.6.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/jsdom": "21.1.7",
+    "@types/node": "20.14.5",
+    "@vitejs/plugin-vue": "5.0.5",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-typescript": "13.0.0",
+    "@vue/test-utils": "2.4.6",
+    "@vue/tsconfig": "0.5.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "2.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.27.0",
+    "rimraf": "^6.0.1",
+    "rollup-plugin-visualizer": "5.12.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0",
+    "vite": "5.3.1",
+    "vitest": "1.6.0",
+    "vue-tsc": "^2.1.2"
   }
 }
