--- a/package.json
+++ b/package.json
@@ -26,21 +26,20 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@rushstack/eslint-patch": "1.10.4",
+    "@stylistic/eslint-plugin": "^2.7.2",
     "@tsconfig/node22": "22.0.0",
     "@types/eslint": "9.6.1",
     "@types/eslint__js": "^8.42.3",
     "@types/jsdom": "21.1.7",
     "@types/node": "20.14.5",
     "@vitejs/plugin-vue": "5.0.5",
-    "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
     "@vue/test-utils": "2.4.6",
     "@vue/tsconfig": "0.5.1",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "2.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.9.0",
     "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "5.12.0",
     "typescript": "^5.5.4",
