--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": [
+      "dom",
       "ESNext"
     ],
     "target": "ESNext",
@@ -17,6 +18,7 @@
     "useDefineForClassFields": true,
     "verbatimModuleSyntax": true,
     "noImplicitAny": true,
+    "allowJs": true,
     "types": [
       "node"
     ],
