--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,10 +6,10 @@
         "jsx": "react",
         "allowImportingTsExtensions": true,
         "strictNullChecks": true,
-        "strictFunctionTypes": true
+        "strictFunctionTypes": true,
     },
     "exclude": [
-        "node_modules",
-        "**/node_modules/*"
-    ]
+        "node_modules/",
+        "dist/"
+    ],
 }
