--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "lib": [
       "dom",
+      "DOM.Iterable",
       "ESNext"
     ],
     "target": "ESNext",
@@ -17,7 +19,7 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "verbatimModuleSyntax": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "allowJs": true,
     "types": [
       "node"
@@ -40,9 +42,7 @@
     }
   ],
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
+    "src/**/*",
     "src/**/*.vue"
   ],
   "exclude": [
