--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint-fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.3",
     "firebase": "^10.13.1",
     "lightningcss": "1.24.1",
     "pinia": "2.1.7",
