feat(pages): create a barely functional user settings page
Try to fix user data loading from current authenticated user :(

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "verbatimModuleSyntax": true,
     "noImplicitAny": false,
     "allowJs": true,
+    "useUnknownInCatchVariables": false,
     "types": [
       "node"
     ],
