--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -7,6 +7,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
+    "useUnknownInCatchVariables": false,
     "lib": [],
     "types": [
       "node",
